fix: CardGrid dark mode styling

--- a/src/components/CardGrid/CardGrid.modules.css
+++ b/src/components/CardGrid/CardGrid.modules.css
@@ -35,6 +35,10 @@
     width: 64px;
 }
 
+[data-theme='dark'] .cardDescription {
+    color: #f6f7f9;
+}
+
 .cardDescription {
     color: #404756;
 }
